--- a/data/settings.json
+++ b/data/settings.json
@@ -1,7 +1,22 @@
 {
-  "site_name": "My Live TV JSON",
-  "logo": "",
+  "app_name": "Online Live TV",
+  "app_logo": "uploads/logo.png",
+  "app_version": "10.3",
+  "app_update_msg": "New update available",
+  "app_update_link": "https://play.google.com/store/apps/details?id=nemosofts.online.live",
+  "app_privacy_policy": "https://example.com/privacy",
+  "publisher_id": "",
   "onesignal_app_id": "",
   "onesignal_rest_key": "",
-  "ads_enabled": false
+  "api_latest_limit": 20,
+  "api_ads_limit": 20,
+  "api_home_limit": 20,
+  "ads_status": 0,
+  "more_apps_url": "",
+  "in_app_purchased": 0,
+  "appid": "",
+  "app_key": "",
+  "account_link": "",
+  "publisher_name": "",
+  "is_one_signal": 0
 }
