Add new app settings to settings.json

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,22 +1,24 @@
 {
-  "app_name": "Online Live TV",
-  "app_logo": "uploads/logo.png",
-  "app_version": "10.3",
-  "app_update_msg": "New update available",
-  "app_update_link": "https://play.google.com/store/apps/details?id=nemosofts.online.live",
-  "app_privacy_policy": "https://example.com/privacy",
-  "publisher_id": "",
-  "onesignal_app_id": "",
-  "onesignal_rest_key": "",
-  "api_latest_limit": 20,
-  "api_ads_limit": 20,
-  "api_home_limit": 20,
-  "ads_status": 0,
-  "more_apps_url": "",
-  "in_app_purchased": 0,
-  "appid": "",
-  "app_key": "",
-  "account_link": "",
-  "publisher_name": "",
-  "is_one_signal": 0
+   "app_email": "your@mail.com",
+   "app_author": "You",
+   "app_contact": "123456",
+   "app_website": "https://live-tv-json.onrender.com",
+   "app_description": "Online Live TV",
+   "app_developed_by": "You",
+   "more_apps_url": "",
+   "envato_api_key": "abc123xyz",  
+   "api_latest_limit": "20",
+   "isRTL": "false",
+   "isMaintenance": "false",
+   "isScreenshot": "false",
+   "isAPK": "false",
+   "isVPN": "false",
+   "isLogin": "false",
+   "isGoogleLogin": "false",
+   "app_update_status": "false",
+   "app_new_version": "1",
+   "app_update_desc": "",
+   "app_redirect_url": "",
+   "ad_status": "false",
+   "player_package_name": "com.google.android.exoplayer2"
 }
