--- a/json_db/tbl_settings.json
+++ b/json_db/tbl_settings.json
@@ -1,94 +1,103 @@
 {
-    "tbl_settings": [
-       {
-  "app_email": "support@yourapp.com",
-  "app_author": "Your Name",
-  "app_contact": "+91 9000000000",
-  "app_website": "https://yourwebsite.com",
-  "app_description": "Online Live TV App",
-  "app_developed_by": "Your Company",
-  "more_apps_url": "",
+  "tbl_settings": [
+    {
+      "app_name": "Online Live TV",
+      "app_logo": "logo.png",
 
-  "purchase_code": "valid",
-  "envato_username": "demo",
-  "envato_api_key": "demo_api_key_123",
-  "item_id": "123456",
-  "package_name": "nemosofts.online.live",
-  "app_version": "10.3",
-  "license_url": "https://google.com",
-  "verify_status": "1",
+      "app_email": "support@yourapp.com",
+      "app_author": "Your Name",
+      "app_contact": "+91 9000000000",
+      "app_website": "https://yourwebsite.com",
+      "app_description": "Online Live TV App",
+      "app_developed_by": "Your Company",
 
-  "api_latest_limit": "20",
+      "app_privacy_policy": "https://yourwebsite.com/privacy",
+      "app_terms": "https://yourwebsite.com/terms",
 
-  "isRTL": "false",
-  "isMaintenance": "false",
-  "isScreenshot": "false",
-  "isAPK": "false",
-  "isVPN": "false",
-  "isLogin": "false",
-  "isGoogleLogin": "false",
+      "home_limit": "10",
 
-  "app_update_status": "false",
-  "app_new_version": "1",
-  "app_update_desc": "",
-  "app_redirect_url": "",
+      "more_apps_url": "",
 
-  "ad_status": "false",
-  "ad_network": "admob",
+      "purchase_code": "valid",
+      "envato_username": "demo",
+      "envato_api_key": "demo_api_key_123",
+      "item_id": "123456",
+      "package_name": "nemosofts.online.live",
+      "app_version": "10.3",
+      "license_url": "https://google.com",
+      "verify_status": "1",
 
-  "admob_publisher_id": "",
-  "admob_banner_unit_id": "",
-  "admob_interstitial_unit_id": "",
-  "admob_native_unit_id": "",
-  "admob_app_open_ad_unit_id": "",
-  "admob_reward_ad_unit_id": "",
+      "api_latest_limit": "20",
 
-  "startapp_app_id": "",
+      "isRTL": "false",
+      "isMaintenance": "false",
+      "isScreenshot": "false",
+      "isAPK": "false",
+      "isVPN": "false",
+      "isLogin": "false",
+      "isGoogleLogin": "false",
 
-  "unity_game_id": "",
-  "unity_banner_placement_id": "",
-  "unity_interstitial_placement_id": "",
-  "unity_reward_ad_unit_id": "",
+      "app_update_status": "false",
+      "app_new_version": "1",
+      "app_update_desc": "",
+      "app_redirect_url": "",
 
-  "applovin_banner_ad_unit_id": "",
-  "applovin_interstitial_ad_unit_id": "",
-  "applovin_native_ad_manual_unit_id": "",
-  "applovin_app_open_ad_unit_id": "",
-  "applovin_reward_ad_unit_id": "",
+      "ad_status": "false",
+      "ad_network": "admob",
 
-  "ironsource_app_key": "",
+      "admob_publisher_id": "",
+      "admob_banner_unit_id": "",
+      "admob_interstitial_unit_id": "",
+      "admob_native_unit_id": "",
+      "admob_app_open_ad_unit_id": "",
+      "admob_reward_ad_unit_id": "",
 
-  "mata_banner_ad_unit_id": "",
-  "mata_interstitial_ad_unit_id": "",
-  "mata_native_ad_manual_unit_id": "",
+      "startapp_app_id": "",
 
-  "yandex_banner_ad_unit_id": "",
-  "yandex_interstitial_ad_unit_id": "",
-  "yandex_native_ad_manual_unit_id": "",
-  "yandex_app_open_ad_unit_id": "",
+      "unity_game_id": "",
+      "unity_banner_placement_id": "",
+      "unity_interstitial_placement_id": "",
+      "unity_reward_ad_unit_id": "",
 
-  "wortise_app_id": "",
-  "wortise_banner_unit_id": "",
-  "wortise_interstitial_unit_id": "",
-  "wortise_native_unit_id": "",
-  "wortise_app_open_unit_id": "",
-  "wortise_reward_ad_unit_id": "",
+      "applovin_banner_ad_unit_id": "",
+      "applovin_interstitial_ad_unit_id": "",
+      "applovin_native_ad_manual_unit_id": "",
+      "applovin_app_open_ad_unit_id": "",
+      "applovin_reward_ad_unit_id": "",
 
-  "app_open_ad_on_start": "false",
-  "banner_home": "false",
-  "banner_post_details": "false",
-  "banner_category_details": "false",
-  "banner_search": "false",
-  "interstitial_post_list": "false",
-  "native_ad_post_list": "false",
-  "native_ad_category_list": "false",
-  "reward_ad_on": "false",
+      "ironsource_app_key": "",
 
-  "interstital_ad_click": "5",
-  "native_position": "6",
-  "reward_credit": "1",
+      "mata_banner_ad_unit_id": "",
+      "mata_interstitial_ad_unit_id": "",
+      "mata_native_ad_manual_unit_id": "",
 
-  "player_package_name": "com.google.android.exoplayer2"
-}
-    ]
+      "yandex_banner_ad_unit_id": "",
+      "yandex_interstitial_ad_unit_id": "",
+      "yandex_native_ad_manual_unit_id": "",
+      "yandex_app_open_ad_unit_id": "",
+
+      "wortise_app_id": "",
+      "wortise_banner_unit_id": "",
+      "wortise_interstitial_unit_id": "",
+      "wortise_native_unit_id": "",
+      "wortise_app_open_unit_id": "",
+      "wortise_reward_ad_unit_id": "",
+
+      "app_open_ad_on_start": "false",
+      "banner_home": "false",
+      "banner_post_details": "false",
+      "banner_category_details": "false",
+      "banner_search": "false",
+      "interstitial_post_list": "false",
+      "native_ad_post_list": "false",
+      "native_ad_category_list": "false",
+      "reward_ad_on": "false",
+
+      "interstital_ad_click": "5",
+      "native_position": "6",
+      "reward_credit": "1",
+
+      "player_package_name": "com.google.android.exoplayer2"
+    }
+  ]
 }
